--- a/staticfiles/css/navigation.css
+++ b/staticfiles/css/navigation.css
@@ -70,6 +70,16 @@
     margin: 0;
 }
 
+.footer {
+    background-color: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
 
 @media (min-width: 768px) {
     .navigation button {
