--- a/templates/posts/add-post.html
+++ b/templates/posts/add-post.html
@@ -3,14 +3,28 @@
 {% block content %}
     <div>
         <h2 class="pet">Add Pet</h2>
-        <form class="form" method="post" action="">
+        <form class="form" method="post" action="" enctype="multipart/form-data">
+        {% csrf_token %}
              {% for field in form %}
                 <div>
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
                 </div>
             {% endfor %}
-            {% csrf_token %}
+        {% if form.errors %}
+    <div class="error-message">
+        <strong>Oops! There are some errors:</strong>
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+
+                {% endfor %}
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
             <button type="submit">Submit</button>
         </form>
     </div>
