--- a/templates/user/change_password.html
+++ b/templates/user/change_password.html
@@ -1,16 +1,10 @@
 {% extends 'common/index.html' %}
 
 {% block content %}
-    <div class="form_div">
-        <form method="post">
-            {% csrf_token %}
-            <label>Old Password</label>
-            {{ form.old_password }}
-            <label>New Password</label>
-            {{ form.new_password1 }}
-            <label>Confirm New Password</label>
-            {{ form.new_password2 }}
-            <button class="button">Change Password</button>
-        </form>
-    </div>
+  <h2>Change Password</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Change Password</button>
+  </form>
 {% endblock %}
