--- a/staticfiles/css/form.css
+++ b/staticfiles/css/form.css
@@ -23,7 +23,7 @@
 }
 .form a {
     font-weight: normal;
-    color: #1c1106; /* Pink color */
+    color: #1c1106;
     font-family: 'Quicksand', sans-serif;
     align-items: center;
 }
@@ -92,6 +92,7 @@
     padding: 0 25px;
     text-align: center;
     text-decoration: none;
+    margin-bottom: 10px;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -179,7 +180,7 @@
 
 .form a {
   font-weight: normal;
-  color: #1c1106; /* Pink color */
+  color: #1c1106;
   font-family: 'Quicksand', sans-serif;
   align-items: center;
 }
@@ -212,29 +213,6 @@
   font-family: 'Quicksand', sans-serif;
 }
 
-.form-pets button {
-  align-items: center;
-  background-color: #e99056;
-  border: 2px solid #1c1106;
-  border-radius: 8px;
-  box-sizing: border-box;
-  color: #1c1106;
-  cursor: pointer;
-  display: flex;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 16px;
-  height: 48px;
-  justify-content: center;
-  line-height: 24px;
-  max-width: 100%;
-  padding: 0 25px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  transition: background-color 0.2s ease;
-}
 
 .form-pets button:after {
   display: none;
@@ -267,38 +245,45 @@
   text-decoration: none;
 }
 
-/* CSS for the container holding the pet cards */
+
 .pet-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
-/* CSS for each individual pet card */
 .pet-card {
-  width: calc(33.33% - 20px); /* Calculate the width of each card with 3 cards per row */
+  background: #d5b48c;
+  width: calc(33.33% - 20px);
   margin-bottom: 20px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-sizing: border-box; /* Include padding and border within the card's width */
+  box-sizing: border-box;
 }
 
-/* CSS for the pet card image */
 .pet-card img {
   width: 100%;
   max-height: 200px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 5px;
 }
 
-/* CSS for the details-buttons inside the pet card */
 .details-buttons {
-  /*align-items: center;*/
   display: flex;
   justify-content: space-between;
-  margin-top: 8px;
+  margin-top: 5px;
+    padding: 5px 10px;
 }
 
 
-
+@media (max-width: 600px) {
+  .pet-card {
+    width: 100%;
+  }
+  .details-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+}
