--- a/templates/user/change_password.html
+++ b/templates/user/change_password.html
@@ -1,10 +1,18 @@
 {% extends 'common/index.html' %}
 
 {% block content %}
-  <h2>Change Password</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Change Password</button>
-  </form>
+  <div class="profile">
+    <h2 class="profile">Change Password</h2>
+        <form class="form" method="post" action="">
+            {% csrf_token %}
+           {% for field in form %}
+                <div>
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+            {% endfor %}
+            {{ form.errors }}
+            <button type="submit">Change</button>
+        </form>
+    </div>
 {% endblock %}
