--- a/staticfiles/css/form.css
+++ b/staticfiles/css/form.css
@@ -287,3 +287,11 @@
     align-items: center;
   }
 }
+
+.square-image {
+  max-width: 400px;
+  max-height: 400px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
