--- a/templates/posts/delete-post.html
+++ b/templates/posts/delete-post.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'common/index.html' %}
 
-</body>
-</html>
+{% block content %}
+  <title>Delete Account</title>
+  <h2>Are you sure you want to delete the post about {{ object.name }}</h2>
+  <form class="form" method="post">
+    {% csrf_token %}
+    <button  type="submit">Yes, Delete the post</button>
+  </form>
+{% endblock %}
