--- a/templates/posts/edit-post.html
+++ b/templates/posts/edit-post.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'common/index.html' %}
+s
+{% block content %}
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Post</title>
 </head>
 <body>
-
+    <h2>Edit Post</h2>
+    <form class="form" method="post" action="">
+            {% csrf_token %}
+           {% for field in form %}
+                <div>
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+            {% endfor %}
+            {{ form.errors }}
+        <button type="submit">Save Changes</button>
+    </form>
 </body>
-</html>
+
+{% endblock %}
