--- a/templates/message/create-message.html
+++ b/templates/message/create-message.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'common/index.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div>
+        <h2 class="pet">Add Pet</h2>
+        <form class="form" method="post" action="" enctype="multipart/form-data">
+        {% csrf_token %}
+             {% for field in form %}
+                <div>
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+            {% endfor %}
+        {% if form.errors %}
+    <div class="error-message">
+        <strong>Oops! There are some errors:</strong>
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+
+                {% endfor %}
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+{% endblock %}
