--- a/templates/message/success-send.html
+++ b/templates/message/success-send.html
@@ -1,4 +1,8 @@
+{% extends 'common/index.html' %}
 
+{% block content %}
 <h1>Successful Sent Message</h1>
 <p>Message sent successfully to {{ recipient }}.</p>
 <a href="{% url 'index' %}">Back to Home</a>
+
+{% endblock %}
