--- a/templates/message/inbox.html
+++ b/templates/message/inbox.html
@@ -1,21 +1,22 @@
-{% extends 'common/index.html' %}
+{% extends 'postman/base.html' %}
+
+
 
 {% block content %}
 <h2>Your Inbox</h2>
 <ul>
   {% for message in recipient_messages %}
-       {% if not  message.answered %}
     <li>
-      <strong>From:</strong> {{ message.sender.username }} <br>
+      <strong>From:</strong> {{ message.sender }} <br>
       <strong>Subject:</strong> {{ message.subject }} <br>
       <strong>Body:</strong> {{ message.body }} <br>
-    <a href="{% url 'answer_message' message.pk %}">Answer</a>
-    {% endif %}
+      <a href="{% url 'postman_view' message.pk %}">Read</a>
     </li>
   {% endfor %}
 </ul>
-
 {% endblock %}
+
+
 
 
 
