--- a/templates/posts/post-details.html
+++ b/templates/posts/post-details.html
@@ -19,7 +19,7 @@
         <p>Description: {{ object.description}}</p>
     {% endif %}
     {% if object.specifics_in_behavior %}
-        <p>description: {{ object.specifics_in_behavior}}</p>
+        <p>Specifics in behavior: {{ object.specifics_in_behavior}}</p>
     {% endif %}
         <p>Health status: {{ object.health_status_text}}</p>
     <p>Town: {{ object.town}}</p>
