--- a/templates/adoption/my_adoption_application.html
+++ b/templates/adoption/my_adoption_application.html
@@ -5,9 +5,9 @@
     <title> My Adoption Applications</title>
 </head>
 <body>
-        {% if adoptions %}
+        {% if my_approved_adoptions %}
             <h2>Adoption Applications:</h2>
-            {% for adoption in adoptions %}
+            {% for adoption in my_approved_adoptions %}
                 <p><strong>Pet:</strong> {{ adoption.pet.name }}</p>
                 <p><strong>Status:</strong> {{ adoption.status }}</p>
                 <hr>
