--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -13,27 +13,36 @@
 
 <body style="background-image: url('{% static 'images/background.jpg' %}')">
     <header>
-        <nav class="navigation">
-            <div class="logo">
-                <img src="" alt="">
-
+    <nav class="navigation">
+      {% if user.is_authenticated %}
+        <div class="user">
+          <a href="#" class="nav-link">About</a>
+          <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
+          <div class="dropdown">
+            <button class="dropbtn">Adoption Events &#9662;</button>
+            <div class="dropdown-content">
+{#              <a href="{% url 'adoption_events_list' %}">See Events</a>#}
+              <a href="{% url 'create adoption event' %}">Add Event</a>
             </div>
-            <div class="nav-buttons">
-                {% if user.is_authenticated %}
-                    <a href="#" class="nav-link">About</a>
-                    <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
-                    <a href="#" class="nav-link">Adoption Events</a>
-                    <a href="{% url 'add pet' %}" class="nav-link">Add Post</a>
-                    <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
-                    <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
-                {% else %}
-                    <a href="{% url 'register user' %}" class="nav-link">Register</a>
-                    <a href="{% url 'login user' %}" class="nav-link">Login</a>
-                    <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
-                    <a href="#" class="nav-link">Adoption Events</a>
-                <a href="#" class="nav-link">About</a>
-                {% endif %}
+          </div>
+          <a href="{% url 'add pet' %}" class="nav-link">Add Post</a>
+          <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
+          <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
+        </div>
+      {% else %}
+        <div class="guest">
+          <a href="{% url 'register user' %}" class="nav-link">Register</a>
+          <a href="{% url 'login user' %}" class="nav-link">Login</a>
+          <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
+          <div class="dropdown">
+            <button class="dropbtn">Adoption Events &#9662;</button>
+            <div class="dropdown-content">
+              <a href="{% url 'adoption_events_list' %}">See Events</a>
             </div>
+          </div>
+          <a href="#" class="nav-link">About</a>
+        </div>
+      {% endif %}
         </nav>
     </header>
     <main>
