--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -18,29 +18,19 @@
         <div class="user">
           <a href="#" class="nav-link">About</a>
           <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
-          <div class="dropdown">
-            <button class="dropbtn">Adoption Events &#9662;</button>
-            <div class="dropdown-content">
-{#              <a href="{% url 'adoption_events_list' %}">See Events</a>#}
-              <a href="{% url 'create adoption event' %}">Add Event</a>
-            </div>
-          </div>
-          <a href="{% url 'add pet' %}" class="nav-link">Add Post</a>
+          <a href="{% url 'add pet' %}" class="nav-link">Add Pet for Adoption</a>
+          <a href="#" class="nav-link">Adoption Events</a>
+          <a href="{% url 'create adoption event' %}" class="nav-link">Add Event</a>
           <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
           <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
         </div>
       {% else %}
         <div class="guest">
-          <a href="{% url 'register user' %}" class="nav-link">Register</a>
-          <a href="{% url 'login user' %}" class="nav-link">Login</a>
           <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
-          <div class="dropdown">
-            <button class="dropbtn">Adoption Events &#9662;</button>
-            <div class="dropdown-content">
-              <a href="{% url 'adoption_events_list' %}">See Events</a>
-            </div>
-          </div>
-          <a href="#" class="nav-link">About</a>
+          <a href="#" class="nav-link">Adoption Events</a>
+          <a href="{% url 'login user' %}" class="nav-link">Login</a>
+          <a href="{% url 'register user' %}" class="nav-link">Register</a>
+
         </div>
       {% endif %}
         </nav>
