--- a/staticfiles/css/form.css
+++ b/staticfiles/css/form.css
@@ -287,11 +287,31 @@
     align-items: center;
   }
 }
+.event-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
 
-.square-image {
-  max-width: 400px;
-  max-height: 400px;
-  width: auto;
-  height: auto;
-  object-fit: contain;
+.event {
+  background: #d5b48c;
+  flex: 0 0 calc(33.33% - 20px);
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.event img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+@media (max-width: 600px) {
+  .event {
+    width: 100%;
+  }
 }
