Change the name of the button - Events

--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -19,7 +19,7 @@
           <a href="#" class="nav-link">About</a>
           <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
           <a href="{% url 'add pet' %}" class="nav-link">Add Pet for Adoption</a>
-          <a href="#" class="nav-link">Adoption Events</a>
+          <a href="{% url 'event catalog' %}" class="nav-link">Events</a>
           <a href="{% url 'create adoption event' %}" class="nav-link">Add Event</a>
           <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
           <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
@@ -27,7 +27,7 @@
       {% else %}
         <div class="guest">
           <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
-          <a href="#" class="nav-link">Adoption Events</a>
+          <a href="{% url 'event catalog' %}" class="nav-link">Events</a>
           <a href="{% url 'login user' %}" class="nav-link">Login</a>
           <a href="{% url 'register user' %}" class="nav-link">Register</a>
 
@@ -44,7 +44,7 @@
         {% endif %}
         {% endblock %}
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy; 2023 PawRescue. Vanesa Kuleva.</p>
     </footer>
 </body>
