--- a/templates/events/adoption_events.html
+++ b/templates/events/adoption_events.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'common/index.html' %}
+{% load static %}
+{% block content %}
+  <h1>Event Catalog</h1>
+  <div class="event-list">
+    {% for event in events %}
+      <div class="event">
+        {% if event.photo %}
+          <img src="{{ event.photo.url }}" alt="{{ event.name }}" class="event-image">
+        {% endif %}
+        <h2>{{ event.name }}</h2>
+        <p>{{ event.description }}</p>
+        <p>Location: {{ event.location }}</p>
+        <p>Start Date: {{ event.start_date }}</p>
+        <p>End Date: {{ event.end_date }}</p>
+        <!-- Add any other event details you want to display -->
+      </div>
+    {% endfor %}
+  </div>
+{% endblock %}
