--- a/templates/common/adoption_events.html
+++ b/templates/common/adoption_events.html
@@ -6,14 +6,19 @@
     {% for event in events %}
       <div class="event">
         {% if event.photo %}
-          <img src="{{ event.photo.url }}" alt="{{ event.name }}" class="event-image">
+        <img src="{{ event.photo.url }}" alt="{{ event.name }}" class="event-image">
         {% endif %}
         <h2>{{ event.name }}</h2>
         <p>{{ event.description }}</p>
         <p>Location: {{ event.location }}</p>
         <p>Start Date: {{ event.start_date }}</p>
         <p>End Date: {{ event.end_date }}</p>
-        <!-- Add any other event details you want to display -->
+      {% if request.user == event.organizer %}
+        <div class="details-buttons">
+            <a href="{% url 'edit event' pk=event.pk %}" class="details-link">Edit</a>
+            <a href="{% url 'delete event' pk=event.pk  %}" class="details-link">Delete</a>
+                </div>
+    {% endif %}
       </div>
     {% endfor %}
   </div>
