--- a/templates/common/adoption_events.html
+++ b/templates/common/adoption_events.html
@@ -13,6 +13,19 @@
         <p>Location: {{ event.location }}</p>
         <p>Start Date: {{ event.start_date }}</p>
         <p>End Date: {{ event.end_date }}</p>
+      {% if request.user.is_authenticated %}
+          {% if event.participants.filter(pk=request.user.pk).exists %}
+            <form method="post" action="{% url 'leave_event' event.pk %}">
+              {% csrf_token %}
+              <button type="submit">Leave Event</button>
+            </form>
+          {% else %}
+            <form method="post" action="{% url 'join_event' event.pk %}">
+              {% csrf_token %}
+              <button type="submit">Join Event</button>
+            </form>
+          {% endif %}
+        {% endif %}
       {% if request.user == event.organizer %}
         <div class="details-buttons">
             <a href="{% url 'edit event' pk=event.pk %}" class="details-link">Edit</a>
