make templates for volunteer

--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -16,7 +16,7 @@
     <nav class="navigation">
       {% if user.is_authenticated %}
         <div class="user">
-          <a href="{% url 'volunteer application' %}" class="nav-link">Volunteer</a>
+          <a href="{% url 'volunteer application' %}" class="nav-link">Become a Volunteer</a>
           <a href="{% url 'pet catalog' %}" class="nav-link">Pets</a>
           <a href="{% url 'add pet' %}" class="nav-link">Add Pet for Adoption</a>
           <a href="{% url 'event catalog' %}" class="nav-link">Events</a>
