--- a/templates/volunteers/thank_you.html
+++ b/templates/volunteers/thank_you.html
@@ -1,2 +1,9 @@
-<h1>Thank You!</h1>
-<p>Your volunteer application has been submitted successfully. We appreciate your interest in volunteering with us!</p>
+{% extends 'common/index.html' %}
+
+{% block content %}
+
+<h2>Thank You!</h2>
+<p></p>
+    <h2>Your volunteer application has been submitted successfully. We appreciate your interest in volunteering with us!</h2>
+
+{% endblock %}
