--- a/templates/events/create_adoption_event.html
+++ b/templates/events/create_adoption_event.html
@@ -5,8 +5,9 @@
         <h2 class="pet">Add Event</h2>
         <form class="form" method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
+
              {% for field in form %}
-                <div>
+                <div class="form-field">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
                 </div>
