--- a/templates/volunteers/volunteer_application.html
+++ b/templates/volunteers/volunteer_application.html
@@ -6,7 +6,7 @@
       <form class="form" method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
              {% for field in form %}
-                <div>
+                <div class="form-field">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
                 </div>
