--- a/templates/user/edit-account.html
+++ b/templates/user/edit-account.html
@@ -10,7 +10,7 @@ s
     <form class="form" method="post" action="">
             {% csrf_token %}
            {% for field in form %}
-                <div>
+                <div class="form-field">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field }}
                 </div>
