--- a/templates/volunteers/volunteer_application.html
+++ b/templates/volunteers/volunteer_application.html
@@ -13,18 +13,16 @@
             {% endfor %}
         {% if form.errors %}
     <div class="error-message">
-        <strong>Oops! There are some errors:</strong>
+        <strong>There are some errors:</strong>
         <ul>
             {% for field in form %}
                 {% for error in field.errors %}
                     <li>{{ error }}</li>
-
                 {% endfor %}
             {% endfor %}
         </ul>
     </div>
 {% endif %}
-
             <button type="submit">Submit</button>
         </form>
 {% endblock %}
